--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <header>
         <h1>ハイキングの思い出サイト</h1>
     </header>
-    <div class="circle warabi"><img src="./img/1732757340873.jpg" alt=""></div>
-    <div class="circle teetaa"><img src="./img/20241128_110036.jpg" alt=""></div>
-    <div class="circle hohoemi"><img src="./img/20241128_103647.jpg" alt=""></div>
+    <div class="circle warabi"><img src="1732757340873.jpg" alt=""></div>
+    <div class="circle teetaa"><img src="20241128_110036.jpg" alt=""></div>
+    <div class="circle hohoemi"><img src="20241128_103647.jpg" alt=""></div>
     <div class="page2">
         <a href="index2.html">2</a>
     </div>
